ansible/apps/web/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: cluster
